--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,17 @@
 {
-    "name": "supsign/composer-zip",
-    "description": "Composer script handling for zipping Files",
+    "name": "supsign/composer-symlinks",
+    "description": "Composer script handling symlinks",
     "keywords": ["composer", "script", "symlink"],
     "license": "MIT",
     "authors": [
+        {"name": "Kevin Porras", "email": "kporras07@gmail.com"},
         {"name": "Fabrizio Cocco", "email": "fabrizio.cocco@supsign.ch"}
     ],
+    "require": {
+        "symfony/filesystem": "^2.5 || ^3.0"
+    },
+
     "autoload": {
-        "psr-4": {"Supsign\\ComposerZip\\": "src/"}
+        "psr-4": {"Supsign\\ComposerSymlinks\\": "src/"}
     }
 }
